--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.51.3",
     "react-native": "0.74.1",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
