--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@hookform/resolvers": "^3.3.4",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "@shopify/flash-list": "^1.6.4",
+    "lottie-react-native": "^6.7.2",
+    "moti": "^0.29.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.74.1",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.11.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "zod": "^3.23.6"
