--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.51.3",
     "react-native": "0.74.1",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.3",
