--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.15.6",
     "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.3",
