--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,7 +18,7 @@ target 'VendIt' do
 rn_maps_path = '../node_modules/react-native-maps'
 pod 'react-native-google-maps', :path => rn_maps_path
   config = use_native_modules!
-
+pod 'react-native-branch', path: '../node_modules/react-native-branch'
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
