--- a/package.json
+++ b/package.json
@@ -17,25 +17,32 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "@shopify/flash-list": "^1.6.4",
+    "i18next": "^23.11.5",
     "lottie-react-native": "^6.7.2",
     "moti": "^0.29.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-i18next": "^14.1.2",
     "react-native": "0.74.1",
+    "react-native-branch": "^6.2.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.15.6",
     "react-native-mmkv": "^2.12.2",
+    "react-native-pager-view": "^6.3.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.11.0",
+    "react-native-reanimated": "^3.12.0",
+    "react-native-redash": "^18.1.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.3.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-walkthrough-tooltip": "^1.6.0",
     "react-redux": "^9.1.2",
     "zod": "^3.23.6"
   },
