--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.15.6",
-    "react-native-mmkv": "^2.12.2",
+    "react-native-mmkv": "^3.0.0-beta.6",
     "react-native-pager-view": "^6.3.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.14.0",
